--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -367,7 +367,7 @@
       </notes>
       <segment>
         <source>Mini Hi-Fi Anlage (defekt)</source>
-        <target>Petite chaîne Hi-Fi éteinte</target>
+        <target>Petite chaîne Hi-Fi en panne</target>
       </segment>
     </unit>
     <unit id=".3ScCSJ" name="Kette + Vorhängeschloss">
