--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2382,7 +2382,7 @@
     </unit>
     <unit id="GnItekT" name="HINWEIS: Diese Aktion ist nur in Übersee möglich.">
       <notes>
-        <note category="german">HINWEIS: Diese Aktion ist nur in Übersee möglich.</note>
+        <note category="german">HINWEIS: Diese Aktion ist nur in der Außenwelt möglich.</note>
       </notes>
       <segment>
         <source>HINWEIS: Diese Aktion ist nur in Übersee möglich.</source>
@@ -2396,6 +2396,159 @@
       <segment>
         <source>Neuer Beitrag in</source>
         <target>Neuer Beitrag in</target>
+      </segment>
+    </unit>
+    <unit id="nyhYCez" name="Nachrichten suchen">
+      <notes>
+        <note category="german">Nachrichten suchen</note>
+      </notes>
+      <segment>
+        <source>Nachrichten suchen</source>
+        <target>Nachrichten suchen</target>
+      </segment>
+    </unit>
+    <unit id="qvbVj_e" name="Suchbegriff">
+      <notes>
+        <note category="german">Suchbegriff</note>
+      </notes>
+      <segment>
+        <source>Suchbegriff</source>
+        <target>Suchbegriff</target>
+      </segment>
+    </unit>
+    <unit id="m.JFPYg" name="Suchbegriffe eingeben">
+      <notes>
+        <note category="german">Suchbegriffe eingeben</note>
+      </notes>
+      <segment>
+        <source>Suchbegriffe eingeben</source>
+        <target>Suchbegriffe eingeben</target>
+      </segment>
+    </unit>
+    <unit id="bpR1Iu." name="Benutzer (optional)">
+      <notes>
+        <note category="german">Benutzer (optional)</note>
+      </notes>
+      <segment>
+        <source>Benutzer (optional)</source>
+        <target>Benutzer (optional)</target>
+      </segment>
+    </unit>
+    <unit id="OCg3Wi1" name="Entfernen">
+      <notes>
+        <note category="german">Entfernen</note>
+      </notes>
+      <segment>
+        <source>Entfernen</source>
+        <target>Entfernen</target>
+      </segment>
+    </unit>
+    <unit id="8dquNSH" name="Optionen">
+      <notes>
+        <note category="german">Optionen</note>
+      </notes>
+      <segment>
+        <source>Optionen</source>
+        <target>Optionen</target>
+      </segment>
+    </unit>
+    <unit id="2E_8DZ9" name="In Titeln suchen">
+      <notes>
+        <note category="german">In Titeln suchen</note>
+      </notes>
+      <segment>
+        <source>In Titeln suchen</source>
+        <target>In Titeln suchen</target>
+      </segment>
+    </unit>
+    <unit id="gz5au3s" name="Tipps zur Suche">
+      <notes>
+        <note category="german">Tipps zur Suche</note>
+      </notes>
+      <segment>
+        <source>Tipps zur Suche</source>
+        <target>Tipps zur Suche</target>
+      </segment>
+    </unit>
+    <unit id="_MSoX5u" name="dd6fd38">
+      <notes>
+        <note category="german">Benutze Anführungszeichen (" "), um nach einer bestimmten Wortkette zu suchen. Beispiel: "Ration Wasser"</note>
+      </notes>
+      <segment>
+        <source>Benutze Anführungszeichen (" "), um nach einer bestimmten Wortkette zu suchen. Beispiel: "Ration Wasser"</source>
+        <target>Benutze Anführungszeichen (" "), um nach einer bestimmten Wortkette zu suchen. Beispiel: "Ration Wasser"</target>
+      </segment>
+    </unit>
+    <unit id="tQlAKoR" name="60820fb">
+      <notes>
+        <note category="german">Setze ein Ausrufezeichen (!) vor einen Suchbegriff, um diesen auszuschließen. Beispiel: Wasser !Brunnen</note>
+      </notes>
+      <segment>
+        <source>Setze ein Ausrufezeichen (!) vor einen Suchbegriff, um diesen auszuschließen. Beispiel: Wasser !Brunnen</source>
+        <target>Setze ein Ausrufezeichen (!) vor einen Suchbegriff, um diesen auszuschließen. Beispiel: Wasser !Brunnen</target>
+      </segment>
+    </unit>
+    <unit id="HnC2uQZ" name="57f97d9">
+      <notes>
+        <note category="german">Um nach Anführungszeichen oder Ausrufezeichen zu suchen, schreibe einen Backslash (\) davor, um zu verhindern, dass sie als Suchbefehl interpretiert werden. Beispiel: Boom\!</note>
+      </notes>
+      <segment>
+        <source>Um nach Anführungszeichen oder Ausrufezeichen zu suchen, schreibe einen Backslash (\) davor, um zu verhindern, dass sie als Suchbefehl interpretiert werden. Beispiel: Boom\!</source>
+        <target>Um nach Anführungszeichen oder Ausrufezeichen zu suchen, schreibe einen Backslash (\) davor, um zu verhindern, dass sie als Suchbefehl interpretiert werden. Beispiel: Boom\!</target>
+      </segment>
+    </unit>
+    <unit id="3Ql_d91" name="Suchen">
+      <notes>
+        <note category="german">Suchen</note>
+      </notes>
+      <segment>
+        <source>Suchen</source>
+        <target>Suchen</target>
+      </segment>
+    </unit>
+    <unit id="OzcaRPo" name="Foren durchsuchen">
+      <notes>
+        <note category="german">Foren durchsuchen</note>
+      </notes>
+      <segment>
+        <source>Foren durchsuchen</source>
+        <target>Foren durchsuchen</target>
+      </segment>
+    </unit>
+    <unit id="ny.mG4P" name="Es wurden keine Nachrichten gefunden, die deiner Suchanfrage entsprechen.">
+      <notes>
+        <note category="german">Es wurden keine Nachrichten gefunden, die deiner Suchanfrage entsprechen.</note>
+      </notes>
+      <segment>
+        <source>Es wurden keine Nachrichten gefunden, die deiner Suchanfrage entsprechen.</source>
+        <target>Es wurden keine Nachrichten gefunden, die deiner Suchanfrage entsprechen.</target>
+      </segment>
+    </unit>
+    <unit id="uvXzw5b" name="c09e87f">
+      <notes>
+        <note category="german">Deine Suchanfrage hat mehr Ergebnisse geliefert, als hier angezeigt werden können. Versuche, deine Anfrage zu präzisieren, wenn du nicht gefunden hast wonach du suchst.</note>
+      </notes>
+      <segment>
+        <source>Deine Suchanfrage hat mehr Ergebnisse geliefert, als hier angezeigt werden können. Versuche, deine Anfrage zu präzisieren, wenn du nicht gefunden hast wonach du suchst.</source>
+        <target>Deine Suchanfrage hat mehr Ergebnisse geliefert, als hier angezeigt werden können. Versuche, deine Anfrage zu präzisieren, wenn du nicht gefunden hast wonach du suchst.</target>
+      </segment>
+    </unit>
+    <unit id="6QgTFsD" name="Wenn du deine Flucht erzwingst, wirst du zwangsläufig verletzt!">
+      <notes>
+        <note category="german">Wenn du deine Flucht erzwingst, wirst du zwangsläufig verletzt!</note>
+      </notes>
+      <segment>
+        <source>Wenn du deine Flucht erzwingst, wirst du zwangsläufig verletzt!</source>
+        <target>Wenn du deine Flucht erzwingst, wirst du zwangsläufig verletzt!</target>
+      </segment>
+    </unit>
+    <unit id="TvN2VX9" name="Diese Aktion kostet dich 1 AP!">
+      <notes>
+        <note category="german">Diese Aktion kostet dich 1 AP!</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion kostet dich 1 AP!</source>
+        <target>Diese Aktion kostet dich 1 AP!</target>
       </segment>
     </unit>
   </file>
