--- a/translations/items.de.xlf
+++ b/translations/items.de.xlf
@@ -2989,7 +2989,7 @@
         <target>Dreibeiniger Malteser</target>
       </segment>
     </unit>
-    <unit id="DcZugEP" name="Malteser Hündchen auf Droge">
+    <unit id="7qHVAxH" name="Malteser Hündchen auf Droge">
       <notes>
         <note category="german">Malteser Hündchen auf Droge</note>
       </notes>
@@ -2998,7 +2998,7 @@
         <target>Malteser Hündchen auf Droge</target>
       </segment>
     </unit>
-    <unit id="TpCsDff" name="Müdes Malteser Hündchen">
+    <unit id="xkkzvOV" name="Müdes Malteser Hündchen">
       <notes>
         <note category="german">Müdes Malteser Hündchen</note>
       </notes>
@@ -3088,7 +3088,7 @@
         <target>Öffnen</target>
       </segment>
     </unit>
-    <unit id=".pqCaKH" name="Du hast nichts, mit dem du dieses Ding aufbekommen könntest..">
+    <unit id="jidwJvh" name="Du hast nichts, mit dem du dieses Ding aufbekommen könntest..">
       <notes>
         <note category="german">Du hast nichts, mit dem du dieses Ding aufbekommen könntest..</note>
       </notes>
@@ -7570,7 +7570,7 @@
         <target><![CDATA[<nt-fail>Du hast einen Sandball in {citizen}s Gesicht geworfen.</nt-fail><t-fail>Hier ist niemand, auf den du den Sandball werfen könntest...</t-fail>]]></target>
       </segment>
     </unit>
-    <unit id="L3OUyqa" name="e4855a7">
+    <unit id="sU9PQTX" name="a923db5">
       <notes>
         <note category="german">&lt;t-kill-latest&gt;Du hast alle Zombies in dieser Zone mit dieser Waffe umgebracht: {item} ! Entspann dich mal... oder vielleicht besser nicht?&lt;/t-kill-latest&gt;&lt;t-kills&gt;Du hast mit dieser Waffe: {item} {kills} Zombie getötet. Ha! Ha! Ha! Das tut wirklich gut, ab und zu mal ein paar Zombies fertig zu machen...&lt;/t-kills&gt;</note>
       </notes>
@@ -7820,6 +7820,33 @@
       <segment>
         <source>Du hast {item_from} in {item_to} verwandelt.</source>
         <target>Du hast {item_from} in {item_to} verwandelt.</target>
+      </segment>
+    </unit>
+    <unit id="sm7LFnd" name="e5e3120">
+      <notes>
+        <note category="german">Nun, da dein Hündchen auf Droge ist, kann es selbst schwere und sperrige Gegenstände in die Stadt schleppen. Dir fällt auf, dass es ohne Ende sabbert. Es sieht aus, als würde er dich jeden Augenblick anspringen.</note>
+      </notes>
+      <segment>
+        <source>Nun, da dein Hündchen auf Droge ist, kann es selbst schwere und sperrige Gegenstände in die Stadt schleppen. Dir fällt auf, dass es ohne Ende sabbert. Es sieht aus, als würde er dich jeden Augenblick anspringen.</source>
+        <target>Nun, da dein Hündchen auf Droge ist, kann es selbst schwere und sperrige Gegenstände in die Stadt schleppen. Dir fällt auf, dass es ohne Ende sabbert. Es sieht aus, als würde er dich jeden Augenblick anspringen.</target>
+      </segment>
+    </unit>
+    <unit id=".pqCaKH" name="Du brauchst ein Werkzeug, um diesen Gegenstand zu öffnen...">
+      <notes>
+        <note category="german">Du brauchst ein Werkzeug, um diesen Gegenstand zu öffnen...</note>
+      </notes>
+      <segment>
+        <source>Du brauchst ein Werkzeug, um diesen Gegenstand zu öffnen...</source>
+        <target>Du brauchst ein Werkzeug, um diesen Gegenstand zu öffnen...</target>
+      </segment>
+    </unit>
+    <unit id="L3OUyqa" name="e4855a7">
+      <notes>
+        <note category="german">&lt;t-kill-latest&gt;Du hast alle Zombies in dieser Zone mit dieser Waffe umgebracht: {item} ! Entspann dich mal... oder vielleicht besser nicht?&lt;/t-kill-latest&gt;&lt;t-kills&gt;Das hast {kills} Zombies mit dieser Waffe umgebracht: {item}. Haha! Es tut gut, es den Zombies ab und zu mal richtig zu zeigen!&lt;/t-kills&gt;</note>
+      </notes>
+      <segment>
+        <source>&lt;t-kill-latest&gt;Du hast alle Zombies in dieser Zone mit dieser Waffe umgebracht: {item} ! Entspann dich mal... oder vielleicht besser nicht?&lt;/t-kill-latest&gt;&lt;t-kills&gt;Das hast {kills} Zombies mit dieser Waffe umgebracht: {item}. Haha! Es tut gut, es den Zombies ab und zu mal richtig zu zeigen!&lt;/t-kills&gt;</source>
+        <target><![CDATA[<t-kill-latest>Du hast alle Zombies in dieser Zone mit dieser Waffe umgebracht: {item} ! Entspann dich mal... oder vielleicht besser nicht?</t-kill-latest><t-kills>Das hast {kills} Zombies mit dieser Waffe umgebracht: {item}. Haha! Es tut gut, es den Zombies ab und zu mal richtig zu zeigen!</t-kills>]]></target>
       </segment>
     </unit>
   </file>
