Added scout level help button

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -18487,5 +18487,14 @@
         <target>Diese Leiche wurde bereits außerhalb der Stadt entsorgt!</target>
       </segment>
     </unit>
+    <unit id="lpKOzLM" name="b0171bc">
+      <notes>
+        <note category="german">Diese Information gibt dir einen Hinweis darauf, ob Aufklärer gewöhnlicherweise hier vorbeikommen.&lt;br /&gt;&lt;em&gt;Je mehr eine Zone erforscht wurde, desto geringer ist die Chance bei &lt;strong&gt;Betreten&lt;/strong&gt; entdeckt zu werden (du kennst dann ein paar Schleichwege etc...).&lt;/em&gt;</note>
+      </notes>
+      <segment>
+        <source>Diese Information gibt dir einen Hinweis darauf, ob Aufklärer gewöhnlicherweise hier vorbeikommen.&lt;br /&gt;&lt;em&gt;Je mehr eine Zone erforscht wurde, desto geringer ist die Chance bei &lt;strong&gt;Betreten&lt;/strong&gt; entdeckt zu werden (du kennst dann ein paar Schleichwege etc...).&lt;/em&gt;</source>
+        <target><![CDATA[Cette information vous indique si des éclaireurs ont l\'habitude de passer par ici.<br /><em>Plus le secteur est connu, moins vous avez de chances de vous y faire repérer <strong>lorsque vous y entrez</strong> (vous connaissez quelques petits chemins cachés..etc.)</em>]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
