--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -2300,7 +2300,7 @@
       </notes>
       <segment>
         <source>Zukunft</source>
-        <target>Avenir</target>
+        <target>Évolutions</target>
       </segment>
     </unit>
     <unit id="viM4Z2P" name="Einen Empfänger hinzufügen">
