Added longest citizen alive for top 1 town in season ranking

--- a/translations/global.fr.xlf
+++ b/translations/global.fr.xlf
@@ -2448,7 +2448,7 @@
       </notes>
       <segment>
         <source>Nachrichten suchen</source>
-        <target>Recherer un message</target>
+        <target>Rechercher un message</target>
       </segment>
     </unit>
     <unit id="qvbVj_e" name="Suchbegriff">
