Corrected log type for when ressources is taken from bank with a construction site
+ corrected french sentence

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -3089,7 +3089,7 @@
       </notes>
       <segment>
         <source>Es wurde ein neues Gebäude gebaut: %plan%. Der Bau hat folgende Ressourcen verbraucht: %list%</source>
-        <target>Un nouveau bâtiment a été construit : %plan%. Cette construction a utilisé : %list%</target>
+        <target>La construction de %plan% a utilisé : %list%</target>
       </segment>
     </unit>
     <unit id="T6_1xeh" name="Es wurde ein neues Gebäude gebaut: %plan%.">
