--- a/translations/help.en.xlf
+++ b/translations/help.en.xlf
@@ -7366,7 +7366,7 @@ Alle Seelenpunkte, die mit einer gelöschten Stadt erspielt wurden, gehen ebenso
       </notes>
       <segment>
         <source>Wie rüste ich mich aus?</source>
-        <target>How do I get readu?</target>
+        <target>How do I get ready?</target>
       </segment>
     </unit>
     <unit id="BAFRWYu" name="Wie kann ich die Stadt verlassen?">
